<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aula7.parcial1.SegundaActivity">

    <include layout="@layout/actionbar_toolbar"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6">

        <ImageView
            android:id="@+id/im1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/apple"
            android:layout_alignParentLeft="true"

            />

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/im1"
            android:text="@string/labelname"
            android:textColor="@android:color/black"
            android:textStyle="bold"
             />

        <TextView
            android:id="@+id/t2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:text="@string/labelap"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:onClick="goSecondscreen"
            android:text="@string/labelage"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2"
            android:layout_marginLeft="10dp"
            android:onClick="goSecondscreen"
            android:text="@string/labelcell"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelemail"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:onClick="goSecondscreen"
            android:layout_below="@+id/t2"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelcom"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:onClick="goSecondscreen"
            android:layout_below="@+id/t2"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button"
            android:theme="@style/myRaisedButton"
            />

    </LinearLayout>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
